k8s/client/client-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ex-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - burakovalinfo.xyz
    secretName: react-tls
  rules:
  - host: burakovalinfo.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-web-svc
            port:
              number: 80
